// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTheme returns dark theme when color scheme is dark 1`] = `
Object {
  "background": "#000000",
  "border": "#38383A",
  "borderLight": "#48484A",
  "error": "#FF3B30",
  "info": "#007AFF",
  "primary": "#0A84FF",
  "primaryDark": "#0056CC",
  "primaryLight": "#409CFF",
  "secondary": "#8E8E93",
  "success": "#34C759",
  "surface": "#1C1C1E",
  "surfaceSecondary": "#2C2C2E",
  "text": "#FFFFFF",
  "textMuted": "#48484A",
  "textSecondary": "#8E8E93",
  "warning": "#FF9500",
}
`;

exports[`useTheme returns light theme when color scheme is light 1`] = `
Object {
  "background": "#FFFFFF",
  "border": "#C6C6C8",
  "borderLight": "#E5E5EA",
  "error": "#FF3B30",
  "info": "#007AFF",
  "primary": "#007AFF",
  "primaryDark": "#0056CC",
  "primaryLight": "#4A9EFF",
  "secondary": "#8E8E93",
  "success": "#34C759",
  "surface": "#F2F2F7",
  "surfaceSecondary": "#FFFFFF",
  "text": "#000000",
  "textMuted": "#C7C7CC",
  "textSecondary": "#8E8E93",
  "warning": "#FF9500",
}
`;
